fix footer overlapping content

--- a/public/index.css
+++ b/public/index.css
@@ -11,6 +11,7 @@ html {
 
 body {
   height: 100vh;
+  width: 100vw;
   background: rgb(47, 148, 68);
 }
 
@@ -49,17 +50,16 @@ nav ul li a {
 }
 
 main {
-  margin: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
+  gap: 24px;
 }
 
 footer {
-  position: sticky;
+  position: relative;
   bottom: 0px;
-  height: 72px;
   width: 100vw;
   padding: 8px 16px;
   background-color: rgb(28, 86, 39);
@@ -72,6 +72,9 @@ footer a {
   color: wheat;
   text-underline-offset: 12%;
   display: block;
+  height: 72px;
+  display: grid;
+  place-items: center;
 }
 
 .card {
@@ -80,6 +83,10 @@ footer a {
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.25);
   padding: 24px;
   max-width: 500px;
+}
+
+.card:first-of-type {
+  margin-top: 24px;
 }
 
 .card .hint {
